# agentbreaker

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  honeypot.py  input_validation.py  middleware.py  redis.py  security.py  security_headers.py  types.py
backend/app/detection/: __init__.py  base.py  composite.py  context_inflation.py  cost_velocity.py  diminishing_returns.py  engine.py  error_cascade.py  goal_drift.py  reasoning_loop.py  similarity.py  token_entropy.py
backend/app/integrations/: __init__.py  azure.py  gcp.py  langchain.py  openai.py  salesforce.py
backend/app/models/: __init__.py  agent.py  api_key.py  incident.py  metric.py  organization.py  project.py  step.py  subscription.py  user.py
backend/app/schemas/: __init__.py  agent.py  analytics.py  auth.py  carbon.py  detection.py  incident.py  (+3 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_api_agents.py  test_api_auth.py  test_api_incidents.py  test_api_ingest.py  test_carbon.py  test_detection_advanced.py  test_detection_engine.py  test_security.py
demo/: mock_tools.py  run_demo.py
deploy/: README.md  cloudbuild.yaml  deploy.sh
docs/: API.md  ARCHITECTURE.md  BUYER_BRIEF.md  COLD_EMAIL.md  IP-ANALYSIS.md  LAUNCH_CHECKLIST.md  PITCH_DECK.md  PRODUCT_HUNT.md  VALUATION.md
docs/plans/: 2026-03-18-agentbreaker-full-build.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: import_real_traces.py  live_agents.py  live_agents_local.py
sdk/python/: LICENSE  README.md  pyproject.toml  setup.py
sdk/python/agentbreaker/: __init__.py  callbacks.py  client.py  exceptions.py  types.py
sdk/python/tests/: test_client.py
(+55 files in other folders)
